2003-03-05  Angus Leeming  <leeming@lyx.org>

	* FormWrap.[Ch]:
	* forms/form_wrap.fd: changes to use the new Dialog-based scheme.

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove wrap dialog.

	* Dialogs3.C: add wrap dialog.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* FormFloat.[Ch]:
	* forms/form_float.fd: changes to use the new Dialog-based scheme.

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove float dialog.

	* Dialogs3.C: add float dialog.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* FormInclude.[Ch]:
	* forms/form_include.fd: changes to use the new Dialog-based scheme.

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove include dialog.

	* Dialogs3.C: add include dialog.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* FormExternal.[Ch]:
	* forms/form_external.fd: changes to use the new Dialog-based scheme.

	* Dialogs.C:
	* Dialogs2.C:
	* Dialogs_impl.h: remove external dialog.

	* Dialogs3.C: add external dialog.

2003-03-04  Angus Leeming  <leeming@lyx.org>

	* FormText.[Ch]: the label of the input widget is passed to the
	FormText c-tor and used in the build method. 

	* Dialogs3.C: pass an extra arg to the FormText c-tor.

2003-02-28  Alfredo Braunstein <abraunst@libero.it>

	* FormPreferences.C
	* FormSento.C
	* xformsImage.C: Added #include "format.h"

2003-02-27  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C (build): add a label dialog.

	* FormIndex.[Ch]: renamed as FormText.[Ch]
	* forms/form_index.fd: renamed as form_text.fd.

	* FormText.[Ch]
	* forms/form_text.fd: slight refactoring to enable the class to be
	used by two dialogs.

	* Makefile.am: add the new files and remove the old.

2003-02-27  Angus Leeming  <leeming@lyx.org>

	* Alert_pimpl.C: make shortcuts consistent with the rest of LyX.

2003-02-27  Rob Lahaye  <lahaye@snu.ac.kr>

	* FormInclude.[Ch]: use RadiobuttonGroup code, add tooltips and add
	comments.

	* xformsImage.C: use lyx::float_equal() for comparing floats & doubles
